force-app/main/default/objects/User/fields/Certified_advisor__c.field-meta.xml
<CustomField>
    <fullName>Certified_advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified advisor</label>
    <type>Checkbox</type>
</CustomField>