force-app/main/default/objects/User/fields/DESKSCMT__Desk_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Desk User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>