force-app/main/default/objects/User/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Must not be ticked off if it is hiring, subcontractor, etc.</inlineHelpText>
    <label>Employee</label>
    <type>Checkbox</type>
</CustomField>