force-app/main/default/objects/User/fields/Employee_code__c.field-meta.xml
<CustomField>
    <fullName>Employee_code__c</fullName>
    <label>Employee code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>