force-app/main/default/objects/User/fields/FTE__c.field-meta.xml
<CustomField>
    <fullName>FTE__c</fullName>
    <defaultValue>1</defaultValue>
    <label>FTE</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>