force-app/main/default/objects/User/fields/Hourly_basis__c.field-meta.xml
<CustomField>
    <fullName>Hourly_basis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consultants with their checkbox checked will not receive notifications related to the users with 1.0 FTE.</description>
    <label>Hourly basis</label>
    <type>Checkbox</type>
</CustomField>