force-app/main/default/objects/User/fields/Is_Authorized_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Is_Authorized_Accountant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authorized Accountant</label>
    <type>Checkbox</type>
</CustomField>