force-app/main/default/objects/User/fields/risk_approver__c.field-meta.xml
<CustomField>
    <fullName>risk_approver__c</fullName>
    <label>Risk Approver</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>