force-app/main/default/objects/User/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>