force-app/main/default/objects/User/fields/Validation_Rule_Exe__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule_Exe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to let Platform users perform changes on account through process update.</description>
    <label>Validation Rule exception</label>
    <type>Checkbox</type>
</CustomField>