force-app/main/default/objects/User/fields/Work_Hours_Daily__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours_Daily__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Work Hours Daily</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>