force-app/main/default/objects/User/listViews/Service.listView-meta.xml
<ListView>
    <fullName>Service</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>KNOWLEDGE_USER</columns>
    <columns>LIVEAGENT_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>view service</value>
    </filters>
    <filters>
        <field>LIVEAGENT_USER</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Service</label>
    <language>en_US</language>
</ListView>